--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=event-manager
+
+##configuration data base
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:eventDB
+spring.h2.console.enabled=true
