--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
-
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.4.0'
 }
 
 tasks.named('test') {
